NetBSD Problem Report #45435
From www@NetBSD.org Thu Oct 6 10:09:09 2011
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
by www.NetBSD.org (Postfix) with ESMTP id CD42663D4F0
for <gnats-bugs@gnats.NetBSD.org>; Thu, 6 Oct 2011 10:09:09 +0000 (UTC)
Message-Id: <20111006100909.2BB8E63D4EF@www.NetBSD.org>
Date: Thu, 6 Oct 2011 10:09:09 +0000 (UTC)
From: m.drochner@fz-juelich.de
Reply-To: m.drochner@fz-juelich.de
To: gnats-bugs@NetBSD.org
Subject: PTHREAD_KEYS_MAX et al. missing in <limits.h>
X-Send-Pr-Version: www-1.0
>Number: 45435
>Category: standards
>Synopsis: PTHREAD_KEYS_MAX et al. missing in <limits.h>
>Confidential: no
>Severity: non-critical
>Priority: medium
>Responsible: standards-manager
>State: closed
>Class: sw-bug
>Submitter-Id: net
>Arrival-Date: Thu Oct 06 10:10:07 +0000 2011
>Closed-Date: Fri Oct 11 17:52:24 +0000 2024
>Last-Modified: Fri Oct 11 17:52:24 +0000 2024
>Originator: Matthias Drochner
>Release: current
>Organization:
FZJ
>Environment:
NetBSD zelz27 5.99.55 NetBSD 5.99.55 (ZELZ27.IPSEC) #1: Tue Sep 13 21:22:51 MEST 2011 drochner@zelz27:/home/drochner/netbsd/work/sys/arch/i386/compile/ZELZ27.IPSEC i386
>Description:
According to
http://pubs.opengroup.org/onlinepubs/7908799/xsh/limits.h.html
a number of PTHREAD_* implementation limits should be defined
by <limits.h>. They are missing.
>How-To-Repeat:
code inspection, or try to build webkitgtk-1.6.1
>Fix:
add to limits.h, or a header pulled in by it
>Release-Note:
>Audit-Trail:
State-Changed-From-To: open->needs-pullups
State-Changed-By: riastradh@NetBSD.org
State-Changed-When: Mon, 09 Sep 2024 00:59:49 +0000
State-Changed-Why:
Last straggler PTHREAD_STACK_MIN has been added now, needs pullup-10
and pullup-9.
From: "Taylor R Campbell" <riastradh@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/45435 CVS commit: src/include
Date: Mon, 9 Sep 2024 12:01:01 +0000
Module Name: src
Committed By: riastradh
Date: Mon Sep 9 12:01:01 UTC 2024
Modified Files:
src/include: limits.h
Log Message:
limits.h: Define PTHREAD_STACK_MIN and tidy up comments.
Define this to be 4096, which is (as far as I can tell) the smallest
possible page size on any architecture NetBSD supports. This should
be MIN_PAGE_SIZE instead, but I don't think that is exposed in any
way that doesn't badly pollute the namespace. We should maybe have a
__MIN_PAGE_SIZE defined in some header file exposed to userland.
Of course, applications actually need to allocate at least
sysconf(_SC_THREAD_STACK_MIN) = getpagesize() bytes, which may be
larger than PTHREAD_STACK_MIN.
The various feature flags (dates) like _POSIX_THREAD_ATTR_STACKADDR
are defined (or not defined) by unistd.h, not by limits.h, so there's
no value in mentioning them here -- and the comment is wrong about
most of them (we have implemented _POSIX_THREAD_ATTR_STACKADDR, for
example).
PR standards/45435: PTHREAD_KEYS_MAX et al. missing in <limits.h>
To generate a diff of this commit:
cvs rdiff -u -r1.44 -r1.45 src/include/limits.h
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
State-Changed-From-To: needs-pullups->pending-pullups
State-Changed-By: riastradh@NetBSD.org
State-Changed-When: Fri, 11 Oct 2024 15:08:01 +0000
State-Changed-Why:
pullup-10 #945 https://releng.netbsd.org/cgi-bin/req-10.cgi?show=945
pullup-9 probably not worth risk to builds
From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/45435 CVS commit: [netbsd-10] src/include
Date: Fri, 11 Oct 2024 17:26:33 +0000
Module Name: src
Committed By: martin
Date: Fri Oct 11 17:26:32 UTC 2024
Modified Files:
src/include [netbsd-10]: limits.h
Log Message:
Pull up following revision(s) (requested by riastradh in ticket #945):
include/limits.h: revision 1.45
limits.h: Define PTHREAD_STACK_MIN and tidy up comments.
Define this to be 4096, which is (as far as I can tell) the smallest
possible page size on any architecture NetBSD supports. This should
be MIN_PAGE_SIZE instead, but I don't think that is exposed in any
way that doesn't badly pollute the namespace. We should maybe have a
__MIN_PAGE_SIZE defined in some header file exposed to userland.
Of course, applications actually need to allocate at least
sysconf(_SC_THREAD_STACK_MIN) = getpagesize() bytes, which may be
larger than PTHREAD_STACK_MIN.
The various feature flags (dates) like _POSIX_THREAD_ATTR_STACKADDR
are defined (or not defined) by unistd.h, not by limits.h, so there's
no value in mentioning them here -- and the comment is wrong about
most of them (we have implemented _POSIX_THREAD_ATTR_STACKADDR, for
example).
PR standards/45435: PTHREAD_KEYS_MAX et al. missing in <limits.h>
To generate a diff of this commit:
cvs rdiff -u -r1.43.2.1 -r1.43.2.2 src/include/limits.h
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
State-Changed-From-To: pending-pullups->closed
State-Changed-By: riastradh@NetBSD.org
State-Changed-When: Fri, 11 Oct 2024 17:52:24 +0000
State-Changed-Why:
fixed in HEAD, pulled up to 10, not pulling up <10
>Unformatted:
(Contact us)
$NetBSD: query-full-pr,v 1.47 2022/09/11 19:34:41 kim Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2024
The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.