limits.h: Define PTHREAD_STACK_MIN and tidy up comments.

Define this to be 4096, which is (as far as I can tell) the smallest
possible page size on any architecture NetBSD supports.  This should
be MIN_PAGE_SIZE instead, but I don't think that is exposed in any
way that doesn't badly pollute the namespace.  We should maybe have a
__MIN_PAGE_SIZE defined in some header file exposed to userland.

Of course, applications actually need to allocate at least
sysconf(_SC_THREAD_STACK_MIN) = getpagesize() bytes, which may be
larger than PTHREAD_STACK_MIN.

The various feature flags (dates) like _POSIX_THREAD_ATTR_STACKADDR
are defined (or not defined) by unistd.h, not by limits.h, so there's
no value in mentioning them here -- and the comment is wrong about
most of them (we have implemented _POSIX_THREAD_ATTR_STACKADDR, for
example).

PR standards/45435: PTHREAD_KEYS_MAX et al. missing in <limits.h>